--- a/simple.yml
+++ b/simple.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: simple-provisioning
   hosts: localhost
   connection: local
@@ -9,16 +10,16 @@
     vpc_cidr_block: 10.210.0.0/16
     subnet_cidr_block: 10.210.1.0/24
     instance_image: ami-0b827f3319f7447c6
-    ec2_key_name: btc-key
+    ec2_key_name: btc_class3
     instance_type: t3.nano
-	
+    
   tasks:
-  - name: create VPC
+  - name: create vpc
     ec2_vpc_net:
       name: "{{ vpc_name }}"
       cidr_block: "{{ vpc_cidr_block }}"
       region: "{{ aws_region }}"
       tags:
-        Name: "{{ vpc_name }}"
+        Name: "{{vpc_name}}"
       tenancy: default
     register: result_vpc
