--- a/simple.yml
+++ b/simple.yml
@@ -10,7 +10,7 @@
     vpc_cidr_block: 10.210.0.0/16
     subnet_cidr_block: 10.210.1.0/24
     instance_image: ami-0b827f3319f7447c6
-    ec2_key_name: btc_class3
+    ec2_key_name: btc-key
     instance_type: t3.nano
     
   tasks:
